fix de la barre de nav, suppression de quelques règles devenues inutiles avec bootstrap 4 et amélioration du second bloc (règles css et suppression des images qui remplaçaient le texte)

--- a/contact.html
+++ b/contact.html
@@ -38,22 +38,22 @@
 <body class="container-fluid p-0 no-gutters">
 
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light bg-light px-0 py-4 col-lg-6 mx-lg-auto bg-white">
-			<a class="navbar-brand px-4" href="index.html"><img src="img/la-chouette-agence.png"
+		<nav class="navbar navbar-expand-md navbar-light bg-light px-0 py-2 col-lg-6 mx-lg-auto bg-white">
+			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
 					alt="Logo de La Chouette Agence" /></a>
-			<button class="navbar-toggler px-4" type="button" data-toggle="collapse"
+			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse px-lg-4" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-md-auto">
-					<li class="nav-item active pl-4">
-						<a class="nav-link" href="index.html">Accueil </a>
+				<ul class="navbar-nav ml-md-auto py-2">
+					<li class="nav-item pl-4">
+						<a class="nav-link" href="index.html">Accueil</a>
 					</li>
 					<li class="nav-item active pl-4">
-						<a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			</div>
@@ -67,10 +67,10 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
+						<h1 class="text-center hero-bloc-text t-tangerine">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
+						<p class="text-center mg-lg t-tangerine tight-width-whitespace">
 							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
