--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 <body class="container-fluid p-0 no-gutters">
 
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light bg-light px-0 py-4 col-lg-6 mx-lg-auto bg-white">
-			<a class="navbar-brand px-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de La Chouette Agence" /></a>
-			<button class="navbar-toggler px-4" type="button" data-toggle="collapse"
+		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
+			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
+					alt="Logo de La Chouette Agence" height="40" /></a>
+			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
-			<div class="collapse navbar-collapse px-lg-4" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-md-auto">
+			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
+				id="navbarSupportedContent">
+				<ul class="site-navigation nav navbar-nav">
 					<li class="nav-item active pl-4">
-						<a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item pl-4">
 						<a class="nav-link" href="contact.html">Contact</a>
@@ -56,85 +56,58 @@
 				</ul>
 			</div>
 		</nav>
+
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+			id="bloc-1-hero">
+			<div class="container bloc-lg tight-width-whitespace col-sm-12 text-center">
+				<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100"
+					alt="Logo de La chouette agence">
+				<h1 class="text-center hero-bloc-text tc-white ">
+					La chouette agence.
+				</h1>
+				<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+					id="cta-hero">Contact</a>
+			</div>
+		</section>
+		<!-- bloc-1-presentation END -->
 	</header>
 
-	<main class="page-container">
-		<!-- bloc-1-presentation -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
-			id="bloc-1-hero">
-			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace">
-					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
-						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
-						</h1>
-						<div class="text-center">
-							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- bloc-1-presentation END -->
-
+	<main>
 		<!-- bloc-2-services -->
-		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
-			<div class="container bloc-md">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-					</div>
+		<section class="bloc l-bloc container bloc-md text-center" id="bloc-2-services">
+			<p class="h4 col-10 mx-auto text-muted mt-3">La chouette agence est une agence de web design qui aide les
+				entreprises à devenir attractives et visibles sur Internet.</p>
+			<div class="row med-width-whitespace text-center">
+				<div class="col-sm-4">
+					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<h3 class="my-3">Web design</h3>
+					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
+						laissez-nous vous réaliser un design dont vous serez fier.</p>
 				</div>
-				<div class="row voffset-lg med-width-whitespace">
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h3 class="mg-md text-center">
-							Web design
-						</h3>
-						<p class="text-center ">
-							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
-							zéro, laissez-nous vous réaliser un design dont vous serez fier.
-						</p>
-					</div>
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h3 class="mg-md text-center">
-							&nbsp;Stratégie
-						</h3>
-						<p class="text-center ">
-							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
-							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-						</p>
-					</div>
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h3 class="mg-md text-center">
-							Illustrations
-						</h3>
-						<p class="text-center ">
-							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
-							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-						</p>
-					</div>
+				<div class="col-sm-4">
+					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<h3 class="my-3">Stratégie</h3>
+					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
+						objectifs commerciaux afin de vous proposer le meilleur design possible.
+					</p>
 				</div>
-				<div class="row voffset-lg voffset">
-					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />
-
-					</div>
+				<div class="col-sm-4">
+					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<h3 class="my-3">Illustrations</h3>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
+						talentueux pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
-		</div>
+			<div class="col-xs-12 col-md-7 mx-auto text-center mt-5 mb-3">
+				<blockquote class="blockquote mb-0">
+					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
+						réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
+						doubler nos ventes en ligne à Lyon"</p>
+					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos
+							fourchettes</cite></footer>
+				</blockquote>
+			</div>
+		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
@@ -143,7 +116,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2 class="mg-md text-center tc-white">
+						<h2 class="my-3 text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.<br>
@@ -154,7 +127,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+								class="text-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -177,7 +150,7 @@
 								src="img/1.jpg"
 								alt="paris web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="my-3 text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
 						<p class="text-center">
@@ -189,7 +162,7 @@
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="my-3 text-center">
 							Création d'un site web pour photographes
 						</h3>
 						<p class="text-center">
@@ -203,7 +176,7 @@
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="my-3 text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
 						<p class="text-center">
@@ -216,7 +189,7 @@
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="my-3 text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
 						<p class="text-center">
@@ -233,12 +206,12 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="mg-md text-center tc-white">
+					<h2 class="my-3 text-center tc-white">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
 						<a href="contact.html"
-							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -275,10 +248,8 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-sm-4">
 								Partenaires
 								<ul>
@@ -316,7 +287,7 @@
 									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
