--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
-
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- <script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script> -->
@@ -74,7 +73,7 @@
 
 	<main>
 		<!-- bloc-2-services -->
-		<section class="bloc l-bloc container bloc-md text-center" id="bloc-2-services">
+		<section class="bloc l-bloc bloc-md text-center col-lg-6 mx-auto" id="bloc-2-services">
 			<p class="h4 col-10 mx-auto text-muted mt-3">La chouette agence est une agence de web design qui aide les
 				entreprises à devenir attractives et visibles sur Internet.</p>
 			<div class="row med-width-whitespace text-center">
@@ -111,108 +110,105 @@
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<section
+			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax bloc-lg"
 			id="bloc-3-what-i-do">
-			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace black-background">
-					<div class="col-sm-12">
-						<h2 class="my-3 text-center tc-white">
-							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
-							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
-							.<br>
-						</h2>
-						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
-							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
-							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
-							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="text-white bold-link" href="contact.html">Contactez notre équipe</a><br>
-						</p>
-					</div>
+			<div class="tight-width-whitespace black-background">
+				<div class="col-sm-12 text-center">
+					<h2 class="my-3  tc-white">
+						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
+						le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux
+						clients.
+					</h2>
+					<p class="text-white">
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
+						aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
+						ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
+						nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
+						qui seront facilement trouvable sur les moteurs de recherche.</p>
+					<a class="text-white bold-link" href="contact.html">Contactez notre équipe</a>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-3-what-i-do END -->
 
+
 		<!-- bloc-4-portfolio -->
-		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-					</div>
+		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc container bloc-lg" id="bloc-4-portfolio">
+			<div class="col-sm-12 text-center">
+				<h4 class="h4">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h4>
+			</div>
+			<div class="row tight-width-whitespace py-5">
+				<div class="col-sm-6">
+					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+						<img src="img/1.jpg" alt="Image d'illustration - pile de livres"
+							class="img-fluid portfolio-thumb" />
+					</a>
+					<h3 class="my-3 text-center">
+						Refonte d'un site web pour un journal local
+					</h3>
+					<p class="text-center">
+						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+					</p>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
-							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
-								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="my-3 text-center">
-							Refonte d'un site web pour un journal local
-						</h3>
-						<p class="text-center">
-							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-						</p>
-					</div>
-					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
-							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-						<h3 class="my-3 text-center">
-							Création d'un site web pour photographes
-						</h3>
-						<p class="text-center">
-							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-						</p>
-					</div>
-				</div>
-				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
-							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
-						<h3 class="my-3 text-center">
-							Création d'un site internet pour un voyageur
-						</h3>
-						<p class="text-center">
-							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
-							articles de ce voyageur.
-						</p>
-					</div>
-					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
-							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-						<h3 class="my-3 text-center">
-							Conception d'un site pour une agence de mariage
-						</h3>
-						<p class="text-center">
-							Nous avons travaillé avec cette agence pour créer un site internet permettant la
-							présentation détaillée de leurs prestations.
-						</p>
-					</div>
+				<div class="col-sm-6">
+					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+						<img src="img/2.jpg" class="img-fluid portfolio-thumb"
+							alt="Image d'illustration - femme devant un appareil photo" />
+					</a>
+					<h3 class="my-3 text-center">
+						Création d'un site web pour photographes
+					</h3>
+					<p class="text-center">
+						Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+					</p>
 				</div>
 			</div>
+			<div class="row tight-width-whitespace portfolio-row">
+				<div class="col-sm-6">
+					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+						<img src="img/3.jpg" class="img-fluid portfolio-thumb"
+							alt="Image d'illustration - pièces détachées de montage vidéo" />
+					</a>
+					<h3 class="my-3 text-center">
+						Création d'un site internet pour un voyageur
+					</h3>
+					<p class="text-center">
+						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
+						articles de ce voyageur.
+					</p>
+				</div>
+				<div class="col-sm-6">
+					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+						<img src="img/4.jpg" class="img-fluid portfolio-thumb"
+							alt="Image d'illustration - personnes en train de travailler, papiers cadeaux et rubans" />
+					</a>
+					<h3 class="my-3 text-center">
+						Conception d'un site pour une agence de mariage
+					</h3>
+					<p class="text-center">
+						Nous avons travaillé avec cette agence pour créer un site internet permettant la
+						présentation détaillée de leurs prestations.
+					</p>
+				</div>
+			</div>
+
 		</div>
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-			<div class="container bloc-lg">
-				<div class="row">
-					<h2 class="my-3 text-center tc-white">
-						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-					</h2>
-					<div class="col-sm-12 text-center">
-						<a href="contact.html"
-							class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero">Contact</a>
-					</div>
+		<div class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+			<div class="container bloc-lg text-center">
+				<h2 class="my-3 tc-white">
+					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				</h2>
+				<div class="col-sm-12">
+					<a href="contact.html"
+						class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -220,84 +216,23 @@
 
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
-								</div>
-							</div>
-						</div>
-						<!-- <div class="row">
-							<div class="col-sm-4">
-								Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 1
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 2
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
-							</div>
-						</div> -->
-					</div>
+			<section class="container bloc-sm">
+				<p class="text-center white">
+					La chouette agence - Agence web basée à Lyon.
+				</p>
+				<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
+						<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+						<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 				</div>
-			</div>
+			</section>
 		</footer>
 		<!-- Footer - bloc-8 END -->
-
 	</main>
 	<!-- Principal conteneur END -->
 
-	<!-- JS, Popper.js, and jQuery -->
+	<!-- JS, Popper.js, and jQuery / Carousel modal-->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	</script>
@@ -307,7 +242,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
-
+	<script src="js/carousel.js"></script>
 </body>
 
 </html>
