--- a/contact.html
+++ b/contact.html
@@ -38,99 +38,100 @@
 <body class="container-fluid p-0 no-gutters">
 
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light bg-light px-0 py-2 col-lg-6 mx-lg-auto bg-white">
+		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de La Chouette Agence" /></a>
+					alt="Logo de La Chouette Agence" height="40" /></a>
 			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
-			<div class="collapse navbar-collapse px-lg-4" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-md-auto py-2">
+			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
+				id="navbarSupportedContent">
+				<ul class="site-navigation nav navbar-nav">
 					<li class="nav-item pl-4">
-						<a class="nav-link" href="index.html">Accueil</a>
+						<a class="nav-link" href="index.html">Accueil </a>
 					</li>
-					<li class="nav-item active pl-4">
-						<a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+					<li class="nav-item pl-4">
+						<a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			</div>
 		</nav>
+		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
+			id="bloc-6">
+			<div class="container bloc-lg">
+				<h1 class="text-center hero-bloc-text t-tangerine">
+					Parlons web design !
+				</h1>
+				<p class="text-center mg-lg t-tangerine tight-width-whitespace">
+					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+				</p>
+			</div>
+		</section>
 	</header>
 
 	<main class="page-container">
-
-		<!-- bloc-6 -->
-		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text t-tangerine">
-							Parlons web design !
-						</h1>
-						<p class="text-center mg-lg t-tangerine tight-width-whitespace">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- bloc-6 END -->
-
 		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-							<div class="form-group">
-								<label>
-									Nom
-								</label>
-								<input id="name" class="form-control" required />
-							</div>
-							<div class="form-group">
-								<label>
-									Adresse email
-								</label>
-								<input id="email" class="form-control" type="email" required />
-							</div>
-							<div class="form-group">
-								<label>
-									Comment nous avez-vous connu ?
-								</label>
-								<input class="form-control" type="email" required id="input_504" />
-							</div>
-							<div class="form-group">
-								<label>
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50"
-									required></textarea>
-							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-								type="submit">
-								Envoyer
-							</button>
-						</form>
+		<section class="bloc bgc-white l-bloc" id="bloc-7">
+			<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
+				<form id="form_1" class="col-12 col-md-6" novalidate success-msg="Your message has been sent."
+					fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+					<div class="form-group">
+						<label>
+							Nom
+						</label>
+						<input id="name" class="form-control" required />
 					</div>
-					<div class="col-sm-6">
-						<p>
-							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
-							au vendredi<br>
-						</p>
+					<div class="form-group">
+						<label>
+							Adresse email
+						</label>
+						<input id="email" class="form-control" type="email" required />
 					</div>
+					<div class="form-group">
+						<label>
+							Comment nous avez-vous connu ?
+						</label>
+						<input class="form-control" type="email" required id="input_504" />
+					</div>
+					<div class="form-group">
+						<label>
+							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+					</div>
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+						Envoyer
+					</button>
+				</form>
+				<div class="text-center col-12 col-sm-auto contact-info text-white px-5 py-2">
+					<h2 class="my-4">INFORMATIONS DE CONTACT</h2>
+					<ul class="list-unstyled d-flex flex-column">
+						<li>
+							<p><span>Mail :</span><a href="mailto:contact@lachouetteagence.com"> contact@lachouetteagence.com</a></p>
+						</li>
+						<li>
+							<p><span>Adresse :</span> 2 place Sathonay 69001 Lyon</p>
+						</li>
+					</ul>
+					<h2 class="my-4">HORAIRES</h2>
+					<p class="text-center">Ouvert de 9h à 18h, du lundi au vendredi</p>
 				</div>
 			</div>
-		</div>
+
+			<div class="col-8 mx-auto my-5">
+				<iframe id="g-maps-lca"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.8857043255585!2d4.829982896540446!3d45.76947403077419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1591975332032!5m2!1sfr!2sfr"
+					frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+				</iframe>
+			</div>
+		</section>
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i
+				class="fa fa-chevron-up"></i></a>
 		<!-- ScrollToTop Button END-->
 
 	</main>
