--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 						talentueux pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-7 mx-auto text-center mt-5 mb-3">
+			<div class="col-xs-12 col-md-8 mx-auto text-center mt-5 mb-3">
 				<blockquote class="blockquote mb-0">
-					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
+					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
 						réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
-						doubler nos ventes en ligne à Lyon"</p>
+						doubler nos ventes en ligne à Lyon."</p>
 					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos
 							fourchettes</cite></footer>
 				</blockquote>
@@ -196,7 +196,6 @@
 					</p>
 				</div>
 			</div>
-
 		</div>
 		<!-- bloc-4-portfolio END -->
 
@@ -213,7 +212,11 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-
+				<!-- ScrollToTop Button -->
+				<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i
+					class="fa fa-chevron-up"></i></a>
+			<!-- ScrollToTop Button END-->
+	</main>
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<section class="container bloc-sm">
@@ -229,7 +232,7 @@
 			</section>
 		</footer>
 		<!-- Footer - bloc-8 END -->
-	</main>
+
 	<!-- Principal conteneur END -->
 
 	<!-- JS, Popper.js, and jQuery / Carousel modal-->
