optimisation d'images et modifications footer

--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
 	</main>
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-		<section class="container bloc-sm">
-			<p class="text-center white">
+		<section class="container bloc-sm text-center">
+			<h5 class="text-white">
 				La chouette agence - Agence web basée à Lyon.
-			</p>
+			</h5>
 			<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
 				<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 				<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
