--- a/contact.html
+++ b/contact.html
@@ -163,37 +163,17 @@
 	</main>
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-		<div class="container bloc-sm">
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
-					</p>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
+		<section class="container bloc-sm text-center">
+			<h5 class="text-white">
+				La chouette agence - Agence web basée à Lyon.
+			</h5>
+			<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
+				<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 			</div>
-		</div>
+		</section>
 	</footer>
 
 	<!-- JS, Popper.js, and jQuery -->
