--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<script src="https://kit.fontawesome.com/6a709f68db.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -102,8 +102,8 @@
 		<!-- bloc-7 -->
 		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
-				<form id="form_1" class="col-12 col-md-6" novalidate success-msg="Your message has been sent."
-					fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" class="col-12 col-md-6" novalidate success-msg="Votre message a été envoyé."
+					fail-msg="Oops, il semble que notre serveur ne réponde pas. Votre message n'a pas été envoyé.">
 					<div class="form-group">
 						<label>
 							Nom
