--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<script src="https://kit.fontawesome.com/6a709f68db.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
