modifications footer, mise en place ML, corrections index

--- a/contact.html
+++ b/contact.html
@@ -162,16 +162,23 @@
 
 	</main>
 	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-		<section class="container bloc-sm text-center">
-			<h5 class="text-white">
+	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
+		<section class="container py-3 text-center col-12">
+			<h5 class="text-white col-12 pb-4">
 				La chouette agence - Agence web basée à Lyon.
 			</h5>
-			<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
-				<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+			<div class="col-12 d-flex flex-wrap justify-content-between">
+
+				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
+					<a class="social" href="index.html"><i class="fa fa-twitter icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-facebook icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-dribbble icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-instagram icon-md"></i></a>
+				</div>
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
+						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right text-white pt-3">Nous trouver<i
+						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
 			</div>
 		</section>
 	</footer>
