--- a/index.html
+++ b/index.html
@@ -102,112 +102,90 @@
 					id="cta-hero">Contact</a>
 			</div>
 		</section>
-		<!-- bloc-1-presentation END -->
 	</header>
 
 	<main>
-		<!-- bloc-2-services -->
-		<section class="bloc l-bloc bloc-md text-center col-lg-6 mx-auto" id="bloc-2-services">
-			<p class="h4 col-10 mx-auto text-muted mt-3">La chouette agence est une agence de web design qui aide les
-				entreprises à devenir attractives et visibles sur Internet.</p>
-			<div class="row med-width-whitespace text-center">
-				<div class="col-sm-4">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-					<h3 class="my-3">Web design</h3>
-					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
-						laissez-nous vous réaliser un design dont vous serez fier.</p>
+
+		<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
+			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5">
+				<div class="col-sm-3 my-5">
+					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icon-lg"></span>
+					<h3 class="my-3 h5">WEB DESIGN</h3>
+					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
 				</div>
-				<div class="col-sm-4">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-					<h3 class="my-3">Stratégie</h3>
-					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
-						objectifs commerciaux afin de vous proposer le meilleur design possible.
+				<div class="col-sm-3 my-5">
+					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icon-lg"></span>
+					<h3 class="my-3 h5">STRATÉGIE</h3>
+					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
-				<div class="col-sm-4">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-					<h3 class="my-3">Illustrations</h3>
-					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
-						talentueux pour donner à vos pages une touche finale d'élégance.</p>
+				<div class="col-sm-3 my-5">
+					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icon-lg"></span>
+					<h3 class="my-3 h5">ILLUSTRATIONS</h3>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-8 mx-auto text-center mt-5 mb-3">
+			<div class="col-xs-12 col-md-6 mx-auto text-center mt-5 mb-3">
 				<blockquote class="blockquote mb-0">
-					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
-						réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
-						doubler nos ventes en ligne à Lyon."</p>
-					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos
-							fourchettes</cite></footer>
+					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos fourchettes</cite></footer>
 				</blockquote>
 			</div>
 		</section>
-		<!-- bloc-2-services END -->
-
-		<!-- bloc-3-what-i-do -->
 		<section
 			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax bloc-lg"
 			id="bloc-3-what-i-do">
 			<div class="tight-width-whitespace black-background">
 				<div class="col-sm-12 text-center">
-					<h2 class="my-3  tc-white">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
-						le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux
-						clients.
+					<h2 class="my-3 tc-white">
+						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 					</h2>
 					<p class="text-white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
-						aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
-						ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
-						nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 						qui seront facilement trouvable sur les moteurs de recherche.</p>
 					<a class="text-white bold-link" href="contact.html">Contactez notre équipe</a>
 				</div>
 			</div>
 		</section>
-		<!-- bloc-3-what-i-do END -->
-
-
-		<!-- bloc-4-portfolio -->
-		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc container bloc-lg" id="bloc-4-portfolio">
-			<div class="col-sm-12 text-center">
-				<h4 class="h4">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h4>
+		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat">
+			<div class="col-12 text-center">
+				<h4 class="h4 py-5">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h4>
 			</div>
-			<div class="row tight-width-whitespace py-5">
-				<div class="col-sm-6">
+			<section class="d-flex flex-wrap col-md-6 mx-auto">
+				<div class="col-sm-6 pb-md-5">
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 						<img src="img/1.jpg" alt="Image d'illustration - pile de livres"
 							class="img-fluid portfolio-thumb" />
 					</a>
-					<h3 class="my-3 text-center">
+					<h3 class="my-3 text-center h5 text-uppercase">
 						Refonte d'un site web pour un journal local
 					</h3>
 					<p class="text-center">
 						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 pb-md-5">
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 						<img src="img/2.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - femme devant un appareil photo" />
 					</a>
-					<h3 class="my-3 text-center">
+					<h3 class="my-3 text-center h5 text-uppercase">
 						Création d'un site web pour photographes
 					</h3>
 					<p class="text-center">
 						Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 					</p>
 				</div>
-			</div>
-			<div class="row tight-width-whitespace portfolio-row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 pb-md-5">
 					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 						<img src="img/3.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - pièces détachées de montage vidéo" />
 					</a>
-					<h3 class="my-3 text-center">
+					<h3 class="my-3 text-center h5 text-uppercase">
 						Création d'un site internet pour un voyageur
 					</h3>
 					<p class="text-center">
@@ -215,26 +193,24 @@
 						articles de ce voyageur.
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 pb-md-5">
 					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - personnes en train de travailler, papiers cadeaux et rubans" />
 					</a>
-					<h3 class="my-3 text-center">
+					<h3 class="my-3 text-center h5 text-uppercase">
 						Conception d'un site pour une agence de mariage
 					</h3>
 					<p class="text-center">
-						Nous avons travaillé avec cette agence pour créer un site internet permettant la
-						présentation détaillée de leurs prestations.
+						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 					</p>
 				</div>
+			</section>
 			</div>
 		</div>
-		<!-- bloc-4-portfolio END -->
 
-		<!-- bloc-5-cta -->
-		<div class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+		<div class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper">
 			<div class="container bloc-lg text-center">
 				<h2 class="my-3 tc-white">
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
@@ -251,16 +227,23 @@
 		<!-- ScrollToTop Button END-->
 	</main>
 	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-		<section class="container bloc-sm text-center">
-			<h5 class="text-white">
+	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
+		<section class="container py-3 text-center col-12">
+			<h5 class="text-white col-12 pb-4">
 				La chouette agence - Agence web basée à Lyon.
 			</h5>
-			<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
-				<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-				<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+			<div class="col-12 d-flex flex-wrap justify-content-between">
+
+				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
+					<a class="social" href="index.html"><i class="fa fa-twitter icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-facebook icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-dribbble icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fa fa-instagram icon-md"></i></a>
+				</div>
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
+						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right text-white pt-3">Nous trouver<i
+						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
 			</div>
 		</section>
 	</footer>
