--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Primary Meta Tags -->
-	<title>La Chouette Agence</title>
-	<meta name="title" content="La chouette agence!">
+	<title>La Chouette Agence - Agence de web design</title>
+	<meta name="robots" content="index, follow">
+	<meta name="title" content="La chouette agence - Agence de web design">
 	<meta name="description"
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 	<meta name="Content-Type" content="UTF-8">
@@ -19,7 +20,7 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://jenniferjoret.github.io/OC-P4/">
-	<meta property="og:title" content="La chouette agence!">
+	<meta property="og:title" content="La chouette agence - Agence de web design">
 	<meta property="og:description"
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 	<meta property="og:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
@@ -27,7 +28,7 @@
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://jenniferjoret.github.io/OC-P4/">
-	<meta property="twitter:title" content="La chouette agence!">
+	<meta property="twitter:title" content="La chouette agence - Agence de web design">
 	<meta property="twitter:description"
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 	<meta property="twitter:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
