--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -8,6 +8,7 @@
 
     <!-- Primary Meta Tags -->
     <title>La Chouette Agence - Mentions légales</title>
+    <meta name="robots" content="follow">
     <meta name="title" content="La chouette agence - Mentions légales">
     <meta name="description"
         content="Mentions légales - La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
