ajout de titres aux sections principales, création d'un dossier d'images en pleine résolution, déplacement du fichier css dans /css, ajout de balises strong, passage des cartes en articles + google analytics sur l'index et la page contact

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="fr">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169903829-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-169903829-1');
+	</script>
+	<!---------------------------------------------->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,7 +78,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 
 </head>
 
@@ -109,27 +122,30 @@
 	<main>
 
 		<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
-			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une agence de web design qui aide les
-				entreprises à devenir attractives et visibles sur Internet.</p>
+			<h2 class="pt-4 h1 u-tangerine">NOS SERVICES</h2>
+			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une <strong>agence de web
+					design</strong> qui aide les
+				entreprises à devenir attractives et <strong> sur Internet.</strong></p>
 			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5 d-flex flex-wrap">
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-browser  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">WEB DESIGN</h2>
 					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
-						laissez-nous vous réaliser un design dont vous serez fier.</p>
+						laissez-nous vous <strong>réaliser un design dont vous serez fier.</strong></p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-presentation  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">STRATÉGIE</h2>
 					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
-						objectifs commerciaux afin de vous proposer le meilleur design possible.
+						<strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-edit  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">ILLUSTRATIONS</h2>
-					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
-						talentueux pour donner à vos pages une touche finale d'élégance.</p>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de
+							graphistes
+							talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 mx-auto text-center mt-5 mb-3">
@@ -141,30 +157,30 @@
 				</blockquote>
 			</div>
 		</section>
-		<section
-			class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
-				<div class="col-sm-6 mx-auto text-center black-background">
-					<h2 class="my-3 tc-white h4">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le
-						succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
-					</h2>
-					<p class="text-white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient
-						besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
-						d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
-						Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-						qui seront facilement trouvable sur les moteurs de recherche.</p>
-					<a class="text-white bold-link" href="contact.html"
-						title="Page contact de La chouette agence">Contactez notre équipe</a>
-				</div>
+		<section class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
+			<div class="col-sm-6 mx-auto text-center black-background">
+				<p class="my-3 tc-white h4">
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le
+					succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
+				</p>
+				<p class="text-white">
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient
+					besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. <br> Que vous ayez
+					besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre
+						site</strong>, n’hésitez pas à nous contacter. <br> Nous travaillerons ensemble pour créer des
+					sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+				<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez
+					notre équipe</a>
+			</div>
 		</section>
-		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat">
+		<section class="bloc bgc-white bg-lines-h2-bg bg-repeat">
 			<div class="col-12 text-center">
-				<h3 class="h4 py-5">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h3>
+				<h2 class="pt-5 h1 u-tangerine">PORTFOLIO</h2>
+				<p class="h4 py-5">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</p>
 			</div>
 			<section class="d-flex flex-wrap col-md-6 mx-auto">
-				<div class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+				<article class="col-sm-6 pb-md-5">
+					<a href="#" data-lightbox="img/imgFull/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 						<img src="img/1.jpg" alt="Image d'illustration - pile de livres"
 							class="img-fluid portfolio-thumb" />
@@ -175,9 +191,9 @@
 					<p class="text-center">
 						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 					</p>
-				</div>
-				<div class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+				</article>
+				<article class="col-sm-6 pb-md-5">
+					<a href="#" data-lightbox="img/imgFull/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 						<img src="img/2.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - femme devant un appareil photo" />
@@ -188,9 +204,9 @@
 					<p class="text-center">
 						Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 					</p>
-				</div>
-				<div class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+				</article>
+				<article class="col-sm-6 pb-md-5">
+					<a href="#" data-lightbox="img/imgFull/3.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 						<img src="img/3.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - pièces détachées de montage vidéo" />
@@ -202,9 +218,9 @@
 						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 						articles de ce voyageur.
 					</p>
-				</div>
-				<div class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+				</article>
+				<article class="col-sm-6 pb-md-5">
+					<a href="#" data-lightbox="img/imgFull/4.jpg" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.jpg" class="img-fluid portfolio-thumb"
 							alt="Image d'illustration - personnes en train de travailler, papiers cadeaux et rubans" />
@@ -216,9 +232,9 @@
 						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation
 						détaillée de leurs prestations.
 					</p>
-				</div>
+				</article>
 			</section>
-		</div>
+		</section>
 
 		<section class="bloc bg-banniere bloc-bg-texture texture-paper p-5">
 			<div class="container text-center black-background col-12 col-md-5">
@@ -248,11 +264,11 @@
 					<a class="social" href="https://twitter.com/Lachouetteagence"
 						title="Lien vers le compte twitter de La chouette agence"><i
 							class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="https://www.facebook.com/Lachouetteagence/"
+					<a class="social" href="https://www.facebook.com/Lachouetteagence"
 						title="Lien vers le compte facebook de La chouette agence"><i
 							class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="#"><i class="fab fa-dribbble icon-md"
-							title="Lien vers le compte ??? de La chouette agence"></i></a>
+					<a class="social" href="https://dribbble.com/Lachouetteagence"><i class="fab fa-dribbble icon-md"
+							title="Lien vers le compte Dribbble de La chouette agence"></i></a>
 					<a class="social" href="https://www.instagram.com/Lachouetteagence"
 						title="Lien vers le compte instagram de La chouette agence"><i
 							class="fab fa-instagram icon-md"></i></a>
