passage des i (fontawesome) en span pour l'accessibilité.

--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
 
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
-			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de navigation de La Chouette Agence" height="40" /></a>
-			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
-				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
+			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de navigation de La Chouette Agence" height="40" /></a>
+			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
@@ -123,36 +120,28 @@
 
 		<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
 			<h2 class="pt-4 h1 u-tangerine">NOS SERVICES</h2>
-			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une <strong>agence de web
-					design</strong> qui aide les
-				entreprises à devenir attractives et <strong> sur Internet.</strong></p>
+			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et <strong> sur Internet.</strong></p>
 			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5 d-flex flex-wrap">
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-browser  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">WEB DESIGN</h2>
-					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
-						laissez-nous vous <strong>réaliser un design dont vous serez fier.</strong></p>
+					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous <strong>réaliser un design dont vous serez fier.</strong></p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-presentation  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">STRATÉGIE</h2>
-					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
-						<strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
+					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos <strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
 					<span class="et-icon-edit  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">ILLUSTRATIONS</h2>
-					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de
-							graphistes
-							talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 mx-auto text-center mt-5 mb-3">
 				<blockquote class="blockquote mb-0">
-					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
-						réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
-						doubler nos ventes en ligne à Lyon."</p>
+					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos fourchettes</cite></footer>
 				</blockquote>
 			</div>
@@ -166,9 +155,7 @@
 				<p class="text-white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient
 					besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. <br> Que vous ayez
-					besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre
-						site</strong>, n’hésitez pas à nous contacter. <br> Nous travaillerons ensemble pour créer des
-					sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+					besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre site</strong>, n’hésitez pas à nous contacter. <br> Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
 				<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez
 					notre équipe</a>
 			</div>
@@ -249,7 +236,9 @@
 		</section>
 		<!-- bloc-5-cta END -->
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i class="fa fa-chevron-up"></i></a>
+		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#">
+			<span class="fa fa-chevron-up"></span>
+		</a>
 		<!-- ScrollToTop Button END-->
 	</main>
 	<!-- Footer - bloc-8 -->
@@ -261,24 +250,29 @@
 			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 				<div
 					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
-					<a class="social" href="https://twitter.com/Lachouetteagence"
-						title="Lien vers le compte twitter de La chouette agence"><i
-							class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="https://www.facebook.com/Lachouetteagence"
-						title="Lien vers le compte facebook de La chouette agence"><i
-							class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="https://dribbble.com/Lachouetteagence"><i class="fab fa-dribbble icon-md"
-							title="Lien vers le compte Dribbble de La chouette agence"></i></a>
-					<a class="social" href="https://www.instagram.com/Lachouetteagence"
-						title="Lien vers le compte instagram de La chouette agence"><i
-							class="fab fa-instagram icon-md"></i></a>
+					<a class="social" href="https://twitter.com/Lachouetteagence" title="Lien vers le compte twitter de La chouette agence">
+						<span class="fab fa-twitter icon-md"></span>
+					</a>
+					<a class="social" href="https://www.facebook.com/Lachouetteagence" title="Lien vers le compte facebook de La chouette agence">
+						<span class="fab fa-facebook-f icon-md"></span>
+					</a>
+					<a class="social" href="https://dribbble.com/Lachouetteagence">
+						<span class="fab fa-dribbble icon-md" title="Lien vers le compte Dribbble de La chouette agence"></span>
+					</a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence">
+						<span class="fab fa-instagram icon-md"></span>
+					</a>
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
-					title="Mentions légales de La chouette agence"><i
-						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
+					title="Mentions légales de La chouette agence">
+					<span class="fas fa-file-contract fa-lg pr-2"></span>
+					Mentions légales
+				</a>
 				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
-					title="Page contact de La chouette agence">Nous trouver<i
-						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
+					title="Page contact de La chouette agence">
+					Nous trouver
+					<span class="fas fa-map-marked-alt fa-lg pl-2"></span>
+				</a>
 			</div>
 		</section>
 	</footer>
