--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i class="fa fa-chevron-up"></i></a>
+		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 
 	</main>
@@ -188,24 +188,29 @@
 			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 				<div
 					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
-					<a class="social" href="https://twitter.com/Lachouetteagence"
-						title="Lien vers le compte twitter de La chouette agence"><i
-							class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="https://www.facebook.com/Lachouetteagence/"
-						title="Lien vers le compte facebook de La chouette agence"><i
-							class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="#"><i class="fab fa-dribbble icon-md"
-							title="Lien vers le compte ??? de La chouette agence"></i></a>
-					<a class="social" href="https://www.instagram.com/Lachouetteagence"
-						title="Lien vers le compte instagram de La chouette agence"><i
-							class="fab fa-instagram icon-md"></i></a>
+					<a class="social" href="https://twitter.com/Lachouetteagence" title="Lien vers le compte twitter de La chouette agence">
+						<span class="fab fa-twitter icon-md"></span>
+					</a>
+					<a class="social" href="https://www.facebook.com/Lachouetteagence" title="Lien vers le compte facebook de La chouette agence">
+						<span class="fab fa-facebook-f icon-md"></span>
+					</a>
+					<a class="social" href="https://dribbble.com/Lachouetteagence">
+						<span class="fab fa-dribbble icon-md" title="Lien vers le compte Dribbble de La chouette agence"></span>
+					</a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence">
+						<span class="fab fa-instagram icon-md"></span>
+					</a>
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
-					title="Mentions légales de La chouette agence"><i
-						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
+					title="Mentions légales de La chouette agence">
+					<span class="fas fa-file-contract fa-lg pr-2"></span>
+					Mentions légales
+				</a>
 				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
-					title="Page contact de La chouette agence">Nous trouver<i
-						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
+					title="Page contact de La chouette agence">
+					Nous trouver
+					<span class="fas fa-map-marked-alt fa-lg pl-2"></span>
+				</a>
 			</div>
 		</section>
 	</footer>
