modifications de coquilles, soulignement des liens, passages des aria-labels du js en fr, ajout du CDN pour le swipe

--- a/index.html
+++ b/index.html
@@ -149,15 +149,11 @@
 		<section class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
 			<div class="col-sm-6 mx-auto text-center black-background">
 				<p class="my-3 tc-white h4">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le
-					succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 				</p>
 				<p class="text-white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient
-					besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. <br> Que vous ayez
-					besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre site</strong>, n’hésitez pas à nous contacter. <br> Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
-				<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez
-					notre équipe</a>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. <br> Que vous ayez besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre site</strong>, n’hésitez pas à nous contacter. <br> Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+				<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez notre équipe</a>
 			</div>
 		</section>
 		<section class="bloc bgc-white bg-lines-h2-bg bg-repeat">
@@ -167,10 +163,8 @@
 			</div>
 			<section class="d-flex flex-wrap col-md-6 mx-auto">
 				<article class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/imgFull/1.jpg" data-gallery-id="gallery-1"
-						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-						<img src="img/1.jpg" alt="Image d'illustration - pile de livres"
-							class="img-fluid portfolio-thumb" />
+					<a href="#" data-lightbox="img/imgFull/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+						<img src="img/1.jpg" alt="Image d'illustration - pile de livres" class="img-fluid portfolio-thumb" />
 					</a>
 					<h3 class="my-3 text-center h5 text-uppercase">
 						Refonte d'un site web pour un journal local
@@ -180,10 +174,8 @@
 					</p>
 				</article>
 				<article class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/imgFull/2.jpg" data-gallery-id="gallery-1"
-						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-						<img src="img/2.jpg" class="img-fluid portfolio-thumb"
-							alt="Image d'illustration - femme devant un appareil photo" />
+					<a href="#" data-lightbox="img/imgFull/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+						<img src="img/2.jpg" class="img-fluid portfolio-thumb" alt="Image d'illustration - femme devant un appareil photo" />
 					</a>
 					<h3 class="my-3 text-center h5 text-uppercase">
 						Création d'un site web pour photographes
@@ -193,31 +185,25 @@
 					</p>
 				</article>
 				<article class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/imgFull/3.jpg" data-gallery-id="gallery-1"
-						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-						<img src="img/3.jpg" class="img-fluid portfolio-thumb"
-							alt="Image d'illustration - pièces détachées de montage vidéo" />
+					<a href="#" data-lightbox="img/imgFull/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+						<img src="img/3.jpg" class="img-fluid portfolio-thumb" alt="Image d'illustration - pièces détachées de montage vidéo" />
 					</a>
 					<h3 class="my-3 text-center h5 text-uppercase">
 						Création d'un site internet pour un voyageur
 					</h3>
 					<p class="text-center">
-						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
-						articles de ce voyageur.
+						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 					</p>
 				</article>
 				<article class="col-sm-6 pb-md-5">
-					<a href="#" data-lightbox="img/imgFull/4.jpg" data-gallery-id="gallery-1"
-						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-						<img src="img/4.jpg" class="img-fluid portfolio-thumb"
-							alt="Image d'illustration - personnes en train de travailler, papiers cadeaux et rubans" />
+					<a href="#" data-lightbox="img/imgFull/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage"  data-frame="snapshot-lb">
+						<img src="img/4.jpg" class="img-fluid portfolio-thumb" alt="Image d'illustration - personnes en train de travailler, papiers cadeaux et rubans" />
 					</a>
 					<h3 class="my-3 text-center h5 text-uppercase">
 						Conception d'un site pour une agence de mariage
 					</h3>
 					<p class="text-center">
-						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation
-						détaillée de leurs prestations.
+						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 					</p>
 				</article>
 			</section>
@@ -248,8 +234,7 @@
 				La chouette agence - Agence web basée à Lyon.
 			</p>
 			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
-				<div
-					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
+				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
 					<a class="social" href="https://twitter.com/Lachouetteagence" title="Lien vers le compte twitter de La chouette agence">
 						<span class="fab fa-twitter icon-md"></span>
 					</a>
@@ -265,13 +250,11 @@
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
 					title="Mentions légales de La chouette agence">
-					<span class="fas fa-file-contract fa-lg pr-2"></span>
-					Mentions légales
+					<span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales
 				</a>
 				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
 					title="Page contact de La chouette agence">
-					Nous trouver
-					<span class="fas fa-map-marked-alt fa-lg pl-2"></span>
+					Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span>
 				</a>
 			</div>
 		</section>
@@ -289,6 +272,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" integrity="sha256-ns1OeEP3SedE9Theqmu444I44sikbp1O+bF/6BNUUy0=" crossorigin="anonymous"></script>
 	<script src="js/carousel.min.js"></script>
 </body>
 
