mise à jour "Et-line", passage en français de certaines chaînes dans jqBootstrapValidation

--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et <strong> sur Internet.</strong></p>
 			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5 d-flex flex-wrap">
 				<div class="col-12 col-sm-3 my-5">
-					<span class="et-icon-browser  icon-dark-slate-blue icon-lg"></span>
+					<span class="icon-browser  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">WEB DESIGN</h2>
 					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous <strong>réaliser un design dont vous serez fier.</strong></p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
-					<span class="et-icon-presentation  icon-dark-slate-blue icon-lg"></span>
+					<span class="icon-presentation  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">STRATÉGIE</h2>
 					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos <strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
 				<div class="col-12 col-sm-3 my-5">
-					<span class="et-icon-edit  icon-dark-slate-blue icon-lg"></span>
+					<span class="icon-edit  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">ILLUSTRATIONS</h2>
 					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
