--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,8 @@
 	<meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-		integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 </head>
@@ -78,15 +76,11 @@
 
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
-			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de navigation de La Chouette Agence" height="40" /></a>
-			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
-				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
+			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de navigation de La Chouette Agence" height="40" /></a>
+			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
-				id="navbarSupportedContent">
+			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
 				<ul class="site-navigation nav navbar-nav">
 					<li class="nav-item pl-4">
 						<a class="nav-link" href="index.html">Accueil </a>
@@ -97,8 +91,7 @@
 				</ul>
 			</div>
 		</nav>
-		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
-			id="bloc-6">
+		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<h1 class="text-center hero-bloc-text t-tangerine">
 					Parlons web design !
@@ -225,6 +218,7 @@
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
 	<script src="js/jqBootstrapValidation.js"></script>
+
 	<script src="js/formHandler.js"></script>
 </body>
 
