améliorations responsive index

--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 		integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -104,7 +102,7 @@
 		</nav>
 
 		<section class="bloc bg-banniere bg-t-edge bloc-bg-texture texture-paper b-parallax py-5">
-			<div class="col-12 col-sm-4 text-center black-background mx-auto">
+			<div class="col-10 col-lg-4 text-center black-background mx-auto">
 				<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100"
 					alt="Logo de La chouette agence">
 				<h1 class="text-center hero-bloc-text tc-white h2 ">
@@ -122,18 +120,18 @@
 			<h2 class="pt-4 h1 u-tangerine">NOS SERVICES</h2>
 			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et <strong> sur Internet.</strong></p>
 			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5 d-flex flex-wrap">
-				<div class="col-12 col-sm-3 my-5">
+				<div class="col-12 col-sm-4 col-lg-3 my-5">
 					<span class="icon-browser  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">WEB DESIGN</h2>
 					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous <strong>réaliser un design dont vous serez fier.</strong></p>
 				</div>
-				<div class="col-12 col-sm-3 my-5">
+				<div class="col-12 col-sm-4 col-lg-3 my-5">
 					<span class="icon-presentation  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">STRATÉGIE</h2>
 					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos <strong>objectifs commerciaux</strong> afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
-				<div class="col-12 col-sm-3 my-5">
+				<div class="col-12 col-sm-4 col-lg-3 my-5">
 					<span class="icon-edit  icon-dark-slate-blue icon-lg"></span>
 					<h2 class="my-3 h5">ILLUSTRATIONS</h2>
 					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre <strong>équipe de graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
@@ -147,7 +145,7 @@
 			</div>
 		</section>
 		<section class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
-			<div class="col-sm-6 mx-auto text-center black-background">
+			<div class="col-10 col-lg-6 mx-auto text-center black-background">
 				<p class="my-3 tc-white h4">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 				</p>
