réparation du formulaire (erreurs w3c)

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 				<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
 
 					<!-- FORMULAIRE -->
-					<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !" fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
+					<form id="form_1" class="col-12 col-md-6" novalidate=""  >
 						<div class="form-group">
 							<label for="name">Nom</label>
 							<input id="name" class="form-control" required/>
