--- a/contact.html
+++ b/contact.html
@@ -106,31 +106,37 @@
 					</form>
 					<!-- CARTE DE RENSEIGNEMENTS -->
 					<aside class="text-center col-12 col-sm-auto contact-info mt-5 mt-md-0 px-5 py-2">
-						<h2 class="my-4 text-dark">INFORMATIONS DE CONTACT</h2>
-						<ul class="list-unstyled d-flex flex-column">
-							<li>
-								<p>
-									<span>Mail : </span>
-									<a href="mailto:contact@lachouetteagence.com" title="envoyer un mail à La chouette agence">contact@lachouetteagence.com</a>
-								</p>
-							</li>
-							<li>
-								<p>
-									<span>Téléphone : </span>
-									<a href="tel:0600000000" title="Appeler La chouette agence">06 00 00 00 00</a>
-								</p>
-							</li>
-							<li>
-								<p>
-									<span>Adresse : </span>
-									2 place Sathonay 69001 Lyon
-								</p>
-							</li>
-						</ul>
-						<h2 class="my-4 text-dark">HORAIRES</h2>
-						<p class="text-center">
-							Ouvert de 9h à 18h, du lundi au vendredi
-						</p>
+						<section>
+						<!-- INFORMATIONS GENERALES -->
+							<h2 class="my-4 text-dark">INFORMATIONS DE CONTACT</h2>
+							<ul class="list-unstyled d-flex flex-column">
+								<li>
+									<p>
+										<span>Mail : </span>
+										<a href="mailto:contact@lachouetteagence.com" title="envoyer un mail à La chouette agence">contact@lachouetteagence.com</a>
+									</p>
+								</li>
+								<li>
+									<p>
+										<span>Téléphone : </span>
+										<a href="tel:0600000000" title="Appeler La chouette agence">06 00 00 00 00</a>
+									</p>
+								</li>
+								<li>
+									<p>
+										<span>Adresse : </span>
+										2 place Sathonay 69001 Lyon
+									</p>
+								</li>
+							</ul>
+						</section>
+						<!-- HORAIRES -->
+						<section>
+							<h2 class="my-4 text-dark">HORAIRES</h2>
+							<p class="text-center">
+								Ouvert de 9h à 18h, du lundi au vendredi
+							</p>
+						</section>
 					</aside>
 				</div>
 				<!-- GOOGLE MAPS -->
