--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
 				</div>
 			</section>
 			<!-- DERNIER ENCART CONTACT -->
-			<section class="bloc bg-banniere bloc-bg-texture texture-paper p-5">
+			<div class="bloc bg-banniere bloc-bg-texture texture-paper p-5">
 				<div class="container text-center black-background col-12 col-md-5">
-					<h2 class="mb-3 tc-white h4">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+					<p class="mb-3 tc-white h4">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</p>
 					<div class="col-12">
 						<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero" title="Page contact de La chouette agence">Contact</a>
 					</div>
 				</div>
-			</section>
+			</div>
 			<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><span class="fa fa-chevron-up"></span></a>
 		</main>
 		<!-- FOOTER -->
